# klaviyo-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  accounts.toml  docker-compose.yml  install.bat  install.py  live_smoke.py  pyproject.toml  requirements.in  requirements.prod.in  requirements.prod.txt  requirements.txt  server.py
.github/workflows/: ci.yml
api/: __init__.py  routes.py
docs/: BRD.md  TOOLSET_GUIDE.md  TRD.md
klaviyo_analytics/: __init__.py  cache.py  client.py  config.py  errors.py  logging.py  metrics.py  paths.py  registry.py  schemas.py  service.py
tests/: conftest.py  test_api.py  test_api_wp1.py  test_api_wp14.py  test_api_wp2.py  test_api_wp4.py  test_api_wp5.py  test_api_wp6.py  test_api_wp7.py  test_cache.py  test_client.py  test_client_cache.py  test_client_wp2.py  test_config.py  test_install.py  test_metrics.py  test_registry.py  test_schemas.py  test_schemas_wp2.py  test_server.py  test_server_wp1.py  test_server_wp2.py  test_server_wp4.py  test_server_wp5.py  test_server_wp6.py  test_server_wp7.py  test_service.py  test_service_wp1.py  test_service_wp10.py  test_service_wp11.py  test_service_wp2.py  test_service_wp3.py  test_service_wp4.py  test_service_wp5.py  test_service_wp6.py  test_service_wp7.py  test_service_wp9.py
